Add Group resource type and its scopes to authorization schema
Closes #35562

Signed-off-by: Martin Kanis <mkanis@redhat.com>